# rag-exercise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
requests/: 1-health.rest  2-dataset.rest  3-index.rest  4-ask.rest  5-compare.rest  6-evaluate.rest  README.md  requests.rest
scripts/: ingest.py  run_benchmark.py
src/rag_eval/: __init__.py  main.py
src/rag_eval/db/: embedding_cache.py  experiment_store.py  results_store.py  vector_store.py
src/rag_eval/models/: schemas.py
src/rag_eval/routes/: dataset.py  evaluate.py  experiments.py  index.py  query.py
src/rag_eval/services/: pipeline.py
src/rag_eval/services/benchmark/: benchmark_runner.py  digest.py  pipeline_matrix.py  report_generator.py
src/rag_eval/services/chunking/: chunker.py  fixed_chunker.py  hierarchical_chunker.py  semantic_chunker.py
src/rag_eval/services/data/: fiqa_dataset.py
src/rag_eval/utils/: settings.py
tasks/: dia10-demo.md  dia2-langsmith.md  dia4-report-agent.md  dia5-vertex-ai-setup.md  dia6-rag-cloud-run.md  dia7-agent-cloud-run.md  dia8-monitoring.md  dia9-documentation.md  fase1-agent-langgraph.md  fase1-evaluation.md  overview.md
tests/: conftest.py
tests/eval/: eval_geval.py  eval_tool_correctness.py  tool_correctness_cases.json
tests/integration/: test_api_smoke.py
tests/unit/: test_embedding_cache.py  test_failure_analyzer.py  test_fixed_chunker.py  test_pipeline_matrix.py  test_rag_prompt.py  test_retrieval_evaluator.py  test_retriever_unique_docs.py  test_statistics_calculator.py
(+18 files in other folders)
