[project]
name = "rag-eval"
version = "0.1.0"
description = "RAG evaluation framework comparing chunking and embedding strategies on FiQA"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "beir>=2.0.0",
    "ragas>=0.2.0",
    "deepeval>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.14.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "aiosqlite>=0.20.0",
    "python-ulid>=3.0.0",
    "tiktoken>=0.8.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "sympy>=1.13.0",
    "python-dateutil>=2.9.0",
    "datasets>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers>=4.8.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"
